--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <!-- Resources Section -->
             <section class="resources-links">
                 <h2>Daily Intelligence</h2>
-                <p>Pax Cynica provides curated analysis and strategic insights on today's complex world. We offer
-                    in-depth reports and daily intelligence briefings to empower informed citizens.</p>
+                <p>Pax Cynica provides curated analysis and strategic insights on today's complex world.</p>
                 <a href="resources/index.html">Resources & Reports</a>
             </section>
 
