--- a/resources/index.html
+++ b/resources/index.html
@@ -552,9 +552,9 @@
         <span class="fas fa-bars"></span>
       </button>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resources/index.html">Reports</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Reports</a></li>
+        <li><a href="../about.html">About</a></li>
         <!-- <li><a href="contact.html">Contact</a></li> -->
       </ul>
   </header>
@@ -585,7 +585,7 @@
         </div>
 
     <div class="top-bar">
-      <div class="refresh-info">Last updated: 2025-04-20 22:37:32</div>
+      <div class="refresh-info">Last updated: 2025-04-20 22:41:54</div>
     </div>
 
     <div class="filters">
@@ -990,7 +990,7 @@
                 <a href="specialized-reports/15-30-41/Basic_Intelligence_Brief_2025-04-20.html" class="view-brief-btn">View Brief</a>
             </div>
         </div>
-        </div>, 2025-04-20 22:37:32, and 
+        </div>, 2025-04-20 22:41:54, and 
     <div class="date-group">
         <div class="date-header">
             <span class="date-label">Sunday, April 20, 2025</span>
