--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
 
 <body>
     <header>
+        <img src="assets/images/paxcynica_profile_bold.png" alt="Pax Cynica Profile" class="header-profile">
+
         <div class="header-text-wrapper">
             <h1>About Pax Cynica</h1>
             <p>Who we are, what we do, and the people behind the insights.</p>
