--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
         <div class="header-text-wrapper">
             <h1>About Pax Cynica</h1>
-            <p>Who we are, what we do, and the people behind the insights.</p>
+            <p>Your Filter for the Information War</p>
         </div>
         <!-- Header Navigation Bar -->
         <nav class="main-nav" aria-label="Main Navigation">
