--- a/resources/index.html
+++ b/resources/index.html
@@ -471,7 +471,7 @@
   <header>
     <img src="../assets/images/paxcynica_profile_bold.png" alt="Pax Cynica Profile" class="header-profile">
     <div class="header-text-wrapper">
-      <h1>Pax Cynica</h1>
+      <h1>Pax Cynica Intel</h1>
       <p>Critical Analysis for a Complex World</p>
     </div>
     <nav class="main-nav" aria-label="Main Navigation">
@@ -512,7 +512,7 @@
         </div>
 
     <div class="top-bar">
-      <div class="refresh-info">Last updated: 2025-04-20 22:48:29</div>
+      <div class="refresh-info">Last updated: 2025-04-20 22:53:47</div>
     </div>
 
     <div class="filters">
@@ -917,7 +917,7 @@
                 <a href="specialized-reports/15-30-41/Basic_Intelligence_Brief_2025-04-20.html" class="view-brief-btn">View Brief</a>
             </div>
         </div>
-        </div>, 2025-04-20 22:48:29, and 
+        </div>, 2025-04-20 22:53:47, and 
     <div class="date-group">
         <div class="date-header">
             <span class="date-label">Sunday, April 20, 2025</span>
