--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <title>About Pax Cynica</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -40,18 +43,6 @@
                     challenging information environment. We believe that navigating today's complex geopolitical and
                     social landscapes requires more than just consuming news. It demands rigorous synthesis, critical
                     skepticism, and an understanding of the forces shaping narratives and perceptions.
-                </p>
-                <p>
-                    Behind our daily briefs and deep-dive reports is a commitment to cutting through disinformation and
-                    delivering actionable insights grounded in evidence. We process and analyze information from a
-                    diverse range of sources, applying different analytical lenses to identify key developments, unpack
-                    manipulation tactics, and assess the real human and technical impacts of events on the ground.
-                </p>
-                <p>
-                    Our goal is to present these findings in accessible formats, empowering ordinary citizens with the
-                    strategic understanding typically reserved for insiders. We are built on the principle that informed
-                    citizens are the strongest defense against disinformation and the best navigators of a complex
-                    world.
                 </p>
             </section>
 
@@ -175,6 +166,8 @@
         </nav>
         <p>&copy; 2023 Pax Cynica</p>
     </footer>
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
