--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <span class="fas fa-bars"></span>
             </button>
             <ul class="nav-links">
+                <li>
+                    <button class="nav-close" aria-label="Close navigation">
+                        <span class="fas fa-times"></span>
+                    </button>
+                </li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resources/index.html">Reports</a></li>
                 <li><a href="about.html">About</a></li>
@@ -75,14 +80,7 @@
         </nav>
         <p>&copy; 2023 Pax Cynica</p>
     </footer>
-    <script>
-        // Simple mobile nav toggle
-        const navToggle = document.querySelector('.nav-toggle');
-        const navLinks = document.querySelector('.nav-links');
-        navToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('nav-open');
-        });
-    </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
