--- a/resources/index.html
+++ b/resources/index.html
@@ -543,7 +543,7 @@
         </div>
 
     <div class="top-bar">
-      <div class="refresh-info">Last updated: 2025-04-21 06:27:54</div>
+      <div class="refresh-info">Last updated: 2025-04-21 07:00:15</div>
     </div>
 
     <div class="filters">
@@ -560,6 +560,7 @@
             <span class="date-label">Monday, April 21, 2025</span>
             <span class="report-count">28 Reports</span>
         </div>
+    </div>    
     
         <div class="report-section">
             <div class="report-type">
@@ -895,12 +896,13 @@
                 <a href="specialized-reports/06-10-26/Basic_Intelligence_Brief_2025-04-21.html" class="view-brief-btn">View Brief</a>
             </div>
         </div>
-        </div>, 2025-04-21 06:27:54, and 
+        </div>, 2025-04-21 07:00:15, and 
     <div class="date-group">
         <div class="date-header">
             <span class="date-label">Monday, April 21, 2025</span>
             <span class="report-count">28 Reports</span>
         </div>
+    </div>    
     
         <div class="report-section">
             <div class="report-type">
